Configure shadcn, remove some unncessary files Add a test button of shadcn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noFallthroughCasesInSwitch": true,
     
     // Shadcn UI
-    "baseUrl": ".",
+    // "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
