--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
